--- a/index.html
+++ b/index.html
@@ -184,8 +184,11 @@
 
   </div>
 
-  <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-functions.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-storage.js"></script>
   <script src="js/fb.js"></script>
   <script src="js/jquery-3.3.1.slim.min.js"></script>
   <script src="js/popper.min.js"></script>
