--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-functions.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-storage.js"></script>
   <script src="js/fb.js"></script>
-  <script src="js/jquery-3.3.1.slim.min.js"></script>
+  <script src="js/jquery-3.7.1.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <!-- <script src="js/vue.js"></script> -->
